--- a/hakathon-front/index.css
+++ b/hakathon-front/index.css
@@ -245,6 +245,7 @@ color:#cd6100;
 }
 .number h3{
     text-transform: uppercase;
+    font-size: 12px;
 }
 @media screen and (min-width:576px){
     #numbers{
